added express validator for validating input schema, http-status-codes to return valid statuses
