# server/common/api.yml
@@ -6,53 +6,29 @@ info:
 servers:
 - url: /api/v1
 tags:
-- name: Examples
-  description: Simple example endpoints
+- name: Mails
+  description: Sending Emails endpoint
 - name: Specification
   description: The swagger API specification
 paths:
-  /examples:
-    get:
-      tags:
-      - Examples
-      description: Fetch all examples
-      responses:
-        200:
-          description: Returns all examples
-          content: {}
+  /mails:
     post:
       tags:
-      - Examples
-      description: Create a new example
+        - Mails
+      description: Returns status of the email (sent/queued/failed)
+      parameters: []
+      responses:
+        '200':
+          description: Email will be sent.
+        '400':
+          description: Email will not be sent.
+        '500':
+          description: Internal Service Error.
       requestBody:
-        description: an example
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/ExampleBody'
-        required: true
-      responses:
-        200:
-          description: Returns all examples
-          content: {}
-  /examples/{id}:
-    get:
-      tags:
-      - Examples
-      parameters:
-      - name: id
-        in: path
-        description: The id of the example to retrieve
-        required: true
-        schema:
-          type: integer
-      responses:
-        200:
-          description: Return the example with the specified id
-          content: {}
-        404:
-          description: Example not found
-          content: {}
+              $ref: '#/components/schemas/MailBody'
   /spec:
     get:
       tags:
@@ -63,12 +39,55 @@ paths:
           content: {}
 components:
   schemas:
-    ExampleBody:
-      title: example
+    MailBody:
+      title: Mail
       required:
-      - name
+        - to
+        - from
+        - subject
+        - text
       type: object
       properties:
-        name:
+        to:
+          type: array
+          minLength: 1
+          items:
+            type: object
+            properties:
+              email:
+                type: string
+                format: email
+              name:
+                type: string
+        cc:
+          type: array
+          items:
+            type: object
+            properties:
+              email:
+                type: string
+                format: email
+              name:
+                type: string
+        bcc:
+          type: array
+          items:
+            type: object
+            properties:
+              email:
+                type: string
+                format: email
+              name:
+                type: string
+        from:
+          type: object
+          properties:
+            email:
+              type: string
+              format: email
+            name:
+              type: string
+        subject:
           type: string
-          example: no_stress
+        text:
+          type: string
