# server/routes.ts
@@ -1,5 +1,5 @@
 import { Application } from 'express';
-import examplesRouter from './api/controllers/examples/router';
+import mailsRouter from './api/controllers/mails/router';
 export default function routes(app: Application): void {
-  app.use('/api/v1/examples', examplesRouter);
+  app.use('/v1/mails', mailsRouter);
 }
